# pm-copilot

./: .cursorignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  README.md  config.yaml  setup.sh
commands/: build-command.md  build-mcp.md  build-skill.md  commit.md  push.md  tasks.md  today.md
core/: README.md  config.yaml
core/evals/: README.md
core/task-manager/: README.md  pyproject.toml  requirements.txt  server.py  test_server.py
core/task-manager-mcp/: README.md  mcp-config.json  pyproject.toml  requirements.txt
evals/: .gitignore  README.md  run_evals.sh
evals/expected/outputs/: auto-categorization.json
examples/tutorials/: 01-getting-started.md  02-working-with-initiatives.md  05-advanced-workflows.md  README.md
examples/workflows/: README.md  github.md  metrics.md
integrations/: README.md
integrations/common/: config.py  test_common.py
integrations/slack/: test_slack.py
knowledge/: README.md
mcp/: README.md
mcp/clients/: README.md
mcp/servers/: README.md
skills/i18n-translator/: SKILL.md
skills/internal-comms/: SKILL.md
skills/product-docs/: SKILL.md
skills/prototype-builder/: SKILL.md
skills/skill-creator/: SKILL.md
skills/slash-command-builder/: SKILL.md
skills/user-research-analysis/: SKILL.md
skills/ux-copy/: SKILL.md
tasks/: README.md
templates/: backlog-template.md
workflows/: README.md  build-command.md  build-mcp.md  copywriting.md  daily-planning.md  metrics.md  pr.md  process-backlog.md  tasks.md  today.md  upcoming.md  weekly-review.md
(+17 files in other folders)
