[project]
name = "task-manager-mcp"
version = "0.1.0"
description = "PM Co-Pilot Task Management MCP Server - Provides programmatic access to task management through Model Context Protocol"
readme = "README.md"
authors = [
    { name = "Sam Kawsarani" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

